# uncc_rgbd_odom

./: CMakeLists.txt  README.md  package.xml
core/: CMakeLists.txt
core/include/rgbd_odometry/: RobustMatcher.h  image_function_dev.h  opencv_function_dev.h  pose.hpp  rgbd_odometry_core.h
core/src/: image_function_dev.cpp  opencv_function_dev.cpp  rgbd_odometry_core.cpp
include/rgbd_odometry/: RobustMatcher.h  depth_traits.h  image_function_dev.h  opencv_function_dev.h  point_cloud_xyzrgb.h  prob_and_stat_function_dev.h  rgbd_odometry.h  rgbd_odometry_core.h  rgbd_odometry_ros.h
launch/: rgbd_odometry.launch  rgbd_odometry_bagfile.launch
rviz/: uncc_rgbd_odom.rviz  uncc_rgbd_odom_freiburg.rviz
src/: RobustMatcher.cpp  corr_exp_proc_bag.cpp  image_function_dev.cpp  opencv_function_dev.cpp  point_cloud_xyzrgb.cpp  prob_and_stat_function_dev.cpp  rgbd_odom_driver.cpp  rgbd_odometry.cpp  rgbd_odometry_core.cpp  rgbd_odometry_ros.cpp
