<?xml version="1.0"?>
<package format="2">
    <name>uncc_rgbd_odom</name>
    <version>0.0.1</version>
    <description>Generated 6DOF relative poses between pairs of RGBD frames for odometry</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="arwillis@uncc.edu">arwillis</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>GPLv3</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/relative_nav_msgs_subscriber</url> -->


    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

    <depend>roscpp</depend>
    <depend>cmake_modules</depend>
    <depend>eigen_conversions</depend>
    <!--  <depend>message_filters</depend> -->
    <depend>sensor_msgs</depend>
    <!--  <depend>stereo_msgs</depend> -->
    <!--  <depend>visualization_msgs</depend> -->
    <depend>genmsg</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>boost</depend>
    <depend>cv_bridge</depend>
    <depend>image_geometry</depend>
    <depend>image_transport</depend>
    <depend>image_proc</depend>
    <depend>nodelet</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf</depend>
    <depend>pcl_ros</depend>
    <depend>eigen</depend>
    <depend>rgbd_drivers_uncc</depend>
    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend>
    <build_depend>relative_nav_msgs</build_depend> -->
    <!-- <build_depend>dynamic_reconfigure</build_depend>-->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!-- <run_depend>message_runtime</run_depend> -->
    <!--  <run_depend>dynamic_reconfigure</run_depend>-->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>